src/validation/tests/snapshots/rusty__validation__tests__variable_length_array_test__program__variable_length_array_program_output.snap
---
source: src/validation/tests/variable_length_array_test.rs
expression: program_output
---
error[E026]: POU Type Program does not support a return type. Did you mean Function?
  ┌─ <internal>:2:16
  │
2 │     PROGRAM fn : DINT
  │                ^^^^^^ POU Type Program does not support a return type. Did you mean Function?

error[E044]: Variable Length Arrays are not allowed to be defined inside a Program
  ┌─ <internal>:4:13
  │
4 │             arr : ARRAY[*] OF DINT;
  │             ^^^ Variable Length Arrays are not allowed to be defined inside a Program


